Simplify some optional magic :)